Refactor: separar las hojas de estilo para cada seccion del portafolio, iimportar los estilos a una sola pagina de estilos index.css

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
       content="Miguel Barrera, web developer, front-end development, back-end development, full stack, HTML, CSS, JavaScript, responsive design, Git, portfolio, web projects, software development, bilingual developer, English Spanish, international opportunities, adaptability, problem solving, technical expertise, coding portfolio"
     />
     <title>Miguel's PortFolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./pages/styles.css">
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="content">
         <section id="home">
             <h2>Welcome</h2>
             <p>Hi, I'm a developer.</p>
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Barrera's Portfolio. All rights reserved.</p>
+        <p>&copy; 2026 Barrera's Portfolio. All rights reserved.</p>
     </footer>
 </body>
 </html>
