Refactor: agregar el archivo index.js, agregar la carpeta para contenido javascript, renombar la carpeta de pages a page, conectar el archivo index.js con el archivo html.

--- a/Index.html
+++ b/Index.html
@@ -56,5 +56,6 @@
     <footer>
         <p>&copy; 2026 Barrera's Portfolio. All rights reserved.</p>
     </footer>
+    <script src="./page/index.js" type="module"></script>
 </body>
 </html>
