--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -13,49 +13,50 @@
       content="Miguel Barrera, web developer, front-end development, back-end development, full stack, HTML, CSS, JavaScript, responsive design, Git, portfolio, web projects, software development, bilingual developer, English Spanish, international opportunities, adaptability, problem solving, technical expertise, coding portfolio"
     />
     <title>Miguel's PortFolio</title>
-    <link rel="stylesheet" href="./pages/styles.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <h1>Barrera's Portfolio</h1>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+    <link rel="stylesheet" href="./page/styles.css" />
+  </head>
+  <body class="body">
+    <header class="header">
+      <h1 class="header__user">Miguel Santiago Barrera Castro</h1>
+      <p class="header__description">From Concept to Code</p>
     </header>
 
     <main class="content">
-        <section id="home">
-            <h2>Welcome</h2>
-            <p>Hi, I'm a developer.</p>
-        </section>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <section class="home" id="home">
+        <h2>Welcome</h2>
+        <p>Hi, I'm a developer.</p>
+      </section>
 
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Tell your story here.</p>
-        </section>
+      <section class="about" id="about">
+        <h2>About Me</h2>
+        <p>Tell your story here.</p>
+      </section>
 
-        <section id="projects">
-            <h2>Projects</h2>
-            <article>
-                <h3>Project Name</h3>
-                <p>Project description</p>
-            </article>
-        </section>
+      <section class="projects" id="projects">
+        <h2>Projects</h2>
+        <article>
+          <h3>Project Name</h3>
+          <p>Project description</p>
+        </article>
+      </section>
 
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Get in touch with me.</p>
-        </section>
+      <section class="contact" id="contact">
+        <h2>Contact</h2>
+        <p>Get in touch with me.</p>
+      </section>
     </main>
 
     <footer>
-        <p>&copy; 2026 Barrera's Portfolio. All rights reserved.</p>
+      <p>&copy; 2026 Barrera's Portfolio. All rights reserved.</p>
     </footer>
     <script src="./page/index.js" type="module"></script>
-</body>
+  </body>
 </html>
