--- a/Index.html
+++ b/Index.html
@@ -15,48 +15,96 @@
     <title>Miguel's PortFolio</title>
     <link rel="stylesheet" href="./page/styles.css" />
   </head>
-  <body class="body">
-    <header class="header">
-      <h1 class="header__user">Miguel Santiago Barrera Castro</h1>
-      <p class="header__description">From Concept to Code</p>
-    </header>
+  <body>
+    <div class="page">
+      <header class="header">
+        <nav class="nav">
+          <ul class="nav__list nav__list_location">
+            <li><a class="nav__link" href="#home">Home</a></li>
+            <li><a class="nav__link" href="#about">About</a></li>
+            <li><a class="nav__link" href="#skills">Skills</a></li>
+            <li><a class="nav__link" href="#projects">Projects</a></li>
+            <li><a class="nav__link" href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <h1 class="header__title">Miguel Barrera</h1>
+        <p class="header__description">Full-Stack Web Developer</p>
+        <div class="header__icons">
+          <a
+            class="header__link"
+            href="https://www.linkedin.com/in/miguel-santiago-barrera-castro-web-dev/"
+            target="_blank"
+            ><img
+              class="header__icon"
+              src="./images/linkedin.png"
+              alt="LinkedIn Icon"
+          /></a>
+          <a
+            class="header__link"
+            href="https://github.com/Entus01"
+            target="_blank"
+            ><img
+              class="header__icon"
+              src="./images/github.png"
+              alt="GitHub Icon"
+          /></a>
+        </div>
+      </header>
 
-    <main class="content">
-      <nav class="nav">
-        <ul class="nav__list">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-      <section class="home" id="home">
-        <h2>Welcome</h2>
-        <p>Hi, I'm a developer.</p>
-      </section>
+      <main class="content">
+        <section class="home" id="home">
+          <h2 class="home__title">Full-Stack Portfolio</h2>
+          <p class="home__description">
+            I'm Miguel Santiago Barrera, a Full Stack Web Developer passionate
+            about creating responsive, user-friendly applications. Here you'll
+            find projects that showcase my skills in clean design, scalable
+            solutions, and continuous learning.
+          </p>
+        </section>
 
-      <section class="about" id="about">
-        <h2>About Me</h2>
-        <p>Tell your story here.</p>
-      </section>
+        <section class="about" id="about">
+          <h2 class="about__title">About Me</h2>
+          <p class="about__description">
+            I'm a Full Stack Web Developer passionate about building responsive,
+            user-friendly applications. Skilled in HTML5, CSS3, and modern
+            JavaScript, I create scalable solutions that balance clean design
+            with performance. My projects at the TripleTen Bootcamp highlight
+            API integration, real-time validation, and interactive interfaces.
+            With strong communication and adaptability, I deliver impactful
+            digital experiences while continuously refining my craft.
+          </p>
+        </section>
 
-      <section class="projects" id="projects">
-        <h2>Projects</h2>
-        <article>
-          <h3>Project Name</h3>
-          <p>Project description</p>
-        </article>
-      </section>
+        <section class="skills" id="skills">
+          <h2 class="skills__title">Skills</h2>
+          <ul class="skills__list">
+            <li class="skill"><p class="skill__value-1">100%</p><p class="skill__name">HTML5</p></li>
+            <li class="skill"><p class="skill__value-2">90%</p><p class="skill__name">CSS3</p></li>
+            <li class="skill"><p class="skill__value-3">80%</p><p class="skill__name">JavaScript (ES6+)</p></li>
+            <li class="skill"><p class="skill__value-4">80%</p><p class="skill__name">Git</p></li>
+            <li class="skill"><p class="skill__value-5">90%</p><p class="skill__name">GitHub</p></li>
+            <li class="skill"><p class="skill__value-6">75%</p><p class="skill__name">API Integration</p></li>
+          </ul>
+        </section>
 
-      <section class="contact" id="contact">
-        <h2>Contact</h2>
-        <p>Get in touch with me.</p>
-      </section>
-    </main>
+        <section class="projects" id="projects">
+          <h2>Projects</h2>
+          <article>
+            <h3>Project Name</h3>
+            <p>Project description</p>
+          </article>
+        </section>
 
-    <footer>
-      <p>&copy; 2026 Barrera's Portfolio. All rights reserved.</p>
-    </footer>
+        <section class="contact" id="contact">
+          <h2>Contact</h2>
+          <p>Get in touch with me.</p>
+        </section>
+      </main>
+
+      <footer>
+        <p>&copy; 2026 Barrera's Portfolio. All rights reserved.</p>
+      </footer>
+    </div>
     <script src="./page/index.js" type="module"></script>
   </body>
 </html>
