Fix: corregir el espacio de cada seccion, ajustar la estructura para los proyectos

--- a/Index.html
+++ b/Index.html
@@ -55,44 +55,69 @@
         <section class="home" id="home">
           <h2 class="home__title">Full-Stack Portfolio</h2>
           <p class="home__description">
-            I'm Miguel Santiago Barrera, a Full Stack Web Developer passionate
-            about creating responsive, user-friendly applications. Here you'll
-            find projects that showcase my skills in clean design, scalable
-            solutions, and continuous learning.
+            Welcome to my portfolio, where you'll find an overview of who I am
+            as a Full Stack Web Developer, the skills and technologies I use to
+            build responsive and scalable applications, the projects I've
+            created that showcase my approach to problem-solving and design, and
+            the ways you can connect with me to collaborate. My goal is to give
+            you a clear picture of both my technical expertise and my passion
+            for crafting user-friendly digital experiences.
           </p>
         </section>
 
         <section class="about" id="about">
           <h2 class="about__title">About Me</h2>
           <p class="about__description">
-            I'm a Full Stack Web Developer passionate about building responsive,
-            user-friendly applications. Skilled in HTML5, CSS3, and modern
-            JavaScript, I create scalable solutions that balance clean design
-            with performance. My projects at the TripleTen Bootcamp highlight
-            API integration, real-time validation, and interactive interfaces.
-            With strong communication and adaptability, I deliver impactful
-            digital experiences while continuously refining my craft.
+            I'm Miguel Santiago Barrera, a Full Stack Web Developer from Bogotá,
+            Colombia, passionate about building responsive and scalable
+            applications. Skilled in front-end technologies like HTML5, CSS3,
+            and modern JavaScript, I create solutions that balance clean design
+            with efficient performance. My projects at the TripleTen Bootcamp
+            showcase API integration, real-time validation, and interactive
+            interfaces, while my experience in high-pressure environments has
+            sharpened my critical thinking and problem-solving skills. With
+            leadership, adaptability, and bilingual communication, I bring both
+            technical expertise and resilience to every project.
           </p>
         </section>
 
         <section class="skills" id="skills">
           <h2 class="skills__title">Skills</h2>
           <ul class="skills__list">
-            <li class="skill"><p class="skill__value-1">100%</p><p class="skill__name">HTML5</p></li>
-            <li class="skill"><p class="skill__value-2">90%</p><p class="skill__name">CSS3</p></li>
-            <li class="skill"><p class="skill__value-3">80%</p><p class="skill__name">JavaScript (ES6+)</p></li>
-            <li class="skill"><p class="skill__value-4">80%</p><p class="skill__name">Git</p></li>
-            <li class="skill"><p class="skill__value-5">90%</p><p class="skill__name">GitHub</p></li>
-            <li class="skill"><p class="skill__value-6">75%</p><p class="skill__name">API Integration</p></li>
+            <li class="skill">
+              <p class="skill__value-1">100%</p>
+              <p class="skill__name">HTML5</p>
+            </li>
+            <li class="skill">
+              <p class="skill__value-2">90%</p>
+              <p class="skill__name">CSS3</p>
+            </li>
+            <li class="skill">
+              <p class="skill__value-3">80%</p>
+              <p class="skill__name">JavaScript (ES6+)</p>
+            </li>
+            <li class="skill">
+              <p class="skill__value-4">80%</p>
+              <p class="skill__name">Git</p>
+            </li>
+            <li class="skill">
+              <p class="skill__value-5">90%</p>
+              <p class="skill__name">GitHub</p>
+            </li>
+            <li class="skill">
+              <p class="skill__value-6">75%</p>
+              <p class="skill__name">API Integration</p>
+            </li>
           </ul>
         </section>
 
         <section class="projects" id="projects">
-          <h2>Projects</h2>
-          <article>
-            <h3>Project Name</h3>
-            <p>Project description</p>
-          </article>
+          <h2 class="projects__title">Projects</h2>
+          <div class="project">
+            <h3 class="project__name"></h3>
+            <p class="project__description"></p>
+            <a class="project__link" href="#" target="_blank">View Project</a>
+          </div>
         </section>
 
         <section class="contact" id="contact">
